--- a/app/src/main/res/layout/fragment_upload_prescription.xml
+++ b/app/src/main/res/layout/fragment_upload_prescription.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="20dp"
         app:srcCompat="@drawable/medical_prescription" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
