--- a/app/src/main/res/layout/fragment_why_prescription.xml
+++ b/app/src/main/res/layout/fragment_why_prescription.xml
@@ -4,8 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:behavior_hideable="true"
+    app:behavior_peekHeight="85dp"
+    android:background="@android:color/transparent"
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">>
 
     <ImageView
         android:id="@+id/imageView2"
