--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -12,148 +12,113 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="18dp"
+        android:orientation="vertical"
+        android:padding="2dp">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="@color/grey">
+            android:hint="Recipient's Name"
+            app:boxStrokeColor="@color/teal_200"
+            app:hintTextColor="@color/teal_200">
 
-            <EditText
-                android:id="@+id/recipientName"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/recipientsname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:autofillHints=""
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Recipient's Name"
-                android:inputType="text"
-                android:singleLine="false"
-                android:textSize="24sp"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:fontFamily="@font/roboto_regular"
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="@color/grey">
+            android:hint="Pin Code"
+            app:boxStrokeColor="@color/teal_200"
+            app:hintTextColor="@color/teal_200">
 
-            <EditText
-                android:id="@+id/pinCode"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/pincode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Pin Code"
+                android:fontFamily="@font/roboto_regular"
                 android:inputType="number"
-                android:textSize="24sp"
-                android:visibility="visible"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="@color/grey">
+            android:hint="Address Line 1"
+            app:boxStrokeColor="@color/teal_200"
+            app:hintTextColor="@color/teal_200">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/addressLine1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Address Line 1"
-                android:inputType="number"
-                android:textSize="24sp"
-                android:visibility="visible"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:fontFamily="@font/roboto_regular"
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="@color/grey">
+            android:hint="Address Line 2"
+            app:boxStrokeColor="@color/teal_200"
+            app:hintTextColor="@color/teal_200">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/addressLine2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Address Line 2"
-                android:inputType="text"
-                android:textSize="24sp"
-                android:visibility="visible"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:fontFamily="@font/roboto_regular"
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="@color/grey">
+            android:hint="Address Line 3"
+            app:boxStrokeColor="@color/teal_200"
+            app:hintTextColor="@color/teal_200">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/addressLine3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Address Line 3"
-                android:inputType="text"
-                android:textSize="24sp"
-                android:visibility="visible" />
+                android:fontFamily="@font/roboto_regular"
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="20dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:textColorHint="@color/grey">
+            android:hint="Phone Number"
+            app:boxStrokeColor="@color/teal_200"
+            app:hintTextColor="@color/teal_200"
+            app:prefixText="+91"
+            app:prefixTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/phoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Phone Number"
-                android:inputType="number"
-                android:textSize="24sp"
-                android:visibility="visible" />
+                android:fontFamily="@font/roboto_regular"
+                android:inputType="phone"
+                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -169,7 +134,7 @@
             android:text="Save"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            app:backgroundTint="@color/teal_500"
+            app:backgroundTint="@color/teal_200"
             app:cornerRadius="20dp" />
 
 
