--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:scrollbarThumbHorizontal="@color/transparent"
+    android:scrollbarThumbVertical="@color/transparent"
     tools:context=".homepage">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -124,21 +126,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/card1"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_id"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
 
         <com.denzcoskun.imageslider.ImageSlider
@@ -146,16 +142,16 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:elevation="10dp"
             app:iss_auto_cycle="true"
             app:iss_corner_radius="10"
-            app:iss_delay="2"
+            app:iss_delay="8"
             app:iss_period="1050"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card1" />
+            app:layout_constraintTop_toBottomOf="@+id/recyclerview_id" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/categories"
